Fix spacing on dialogue posts.

--- a/www/css/style-grey.windows.css
+++ b/www/css/style-grey.windows.css
@@ -1445,7 +1445,7 @@ article {
 	max-width: 100%;
 }
 
-.post-meta + .comments {
+.index-page .post-meta + .comments {
 	margin-top: 3em;
 }
 
